# FAST-OAD_CS25

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.rst  MANIFEST.in  README.md  codecov.yml  pyproject.toml  ruff.toml
.PyCharmRunConfs/: pytest all no-cov.run.xml  pytest integration no-cov.run.xml  pytest notebooks no-cov.run.xml  pytest units no-cov.run.xml  pytest units.run.xml  sphinx html doc build.run.xml
.github/workflows/: build_for_Binder.yml  build_release.yml  tests.yml  watchman_tests.yml
binder/: requirements.txt
docs/: conf.py  index.rst  refs.bib  requirements.txt
docs/documentation/: index.rst  install.rst
src/: conftest.py
src/fastoad_cs25/configurations/: cs25_base.yaml
src/fastoad_cs25/models/: __init__.py  constants.py  variable_descriptions.txt
src/fastoad_cs25/models/aerodynamics/: aerodynamics_high_speed.py  aerodynamics_landing.py  aerodynamics_low_speed.py  aerodynamics_takeoff.py  constants.py
src/fastoad_cs25/models/aerodynamics/components/: cd0.py  cd0_fuselage.py  cd0_ht.py  cd0_nacelles_pylons.py  cd0_total.py  cd0_vt.py  cd0_wing.py  cd_compressibility.py  cd_trim.py  compute_alpha.py  compute_cl_alpha.py  compute_low_speed_aero.py  compute_max_cl_landing.py  compute_polar.py  compute_reynolds.py  high_lift_aero.py  initialize_cl.py  oswald.py
src/fastoad_cs25/models/aerodynamics/components/tests/: test_components.py
src/fastoad_cs25/models/aerodynamics/components/utils/: cd0_lifting_surface.py  friction_drag.py
src/fastoad_cs25/models/aerodynamics/tests/: test_aerodynamics_landing.py
src/fastoad_cs25/models/aerodynamics/tests/data/: aerodynamics_inputs.xml
src/fastoad_cs25/models/geometry/: __init__.py  base.py  compute_aero_center.py  constants.py  geometry.py  wing_global_positions.py
src/fastoad_cs25/models/geometry/_deprecated/: compute_aero_center.py  constants.py  geometry.py
src/fastoad_cs25/models/geometry/_deprecated/tests/: test_aero_center.py
src/fastoad_cs25/models/geometry/fuselage/: cabin.py  fuselage.py
src/fastoad_cs25/models/geometry/fuselage/tests/: test_cabin.py
src/fastoad_cs25/models/geometry/geom_components/: __init__.py  compute_wetted_area.py
src/fastoad_cs25/models/geometry/geom_components/fuselage/: __init__.py  compute_cnbeta_fuselage.py  compute_fuselage.py
src/fastoad_cs25/models/geometry/geom_components/ht/: compute_horizontal_tail.py  ht_global_positions.py
src/fastoad_cs25/models/geometry/geom_components/nacelle_pylons/: compute_nacelle_pylons.py
src/fastoad_cs25/models/geometry/geom_components/vt/: compute_vertical_tail.py  vt_global_positions.py
src/fastoad_cs25/models/geometry/geom_components/wing/: __init__.py  compute_wing.py  constants.py  wing_global_positions.py
src/fastoad_cs25/models/geometry/lifting_surfaces/: lifting_surface.py  profile.py
src/fastoad_cs25/models/geometry/lifting_surfaces/tests/: __init__.py  test_lifting_surface.py  test_profile.py
src/fastoad_cs25/models/geometry/profiles/: __init__.py  profile.py  profile_getter.py
src/fastoad_cs25/models/geometry/profiles/tests/: test_profile.py
src/fastoad_cs25/models/geometry/tests/: test_aero_center.py  test_geometry_geom_comps.py  test_wing_global_positions.py
src/fastoad_cs25/models/geometry/tests/data/: geometry_inputs_full.xml  variable_linkage.txt
src/fastoad_cs25/models/handling_qualities/: compute_static_margin.py
src/fastoad_cs25/models/handling_qualities/tail_sizing/: compute_ht_area.py  compute_tail_areas.py  compute_vt_area.py
src/fastoad_cs25/models/handling_qualities/tests/: test_static_margin.py  test_tail_areas.py
src/fastoad_cs25/models/handling_qualities/tests/data/: hq_inputs.xml
src/fastoad_cs25/models/loads/: __init__.py  constants.py  loads.py
src/fastoad_cs25/models/loads/sizing_loads/: __init__.py  gust.py  maneuver.py  sizing_loads_envelope.py  sizing_loads_max.py
src/fastoad_cs25/models/loads/tests/: __init__.py  test_loads.py
src/fastoad_cs25/models/loads/tests/data/: mass_breakdown_inputs.xml
src/fastoad_cs25/models/loops/: compute_wing_area.py  compute_wing_position.py  constants.py
src/fastoad_cs25/models/loops/tests/: test_compute_wing_area.py  test_compute_wing_position.py
src/fastoad_cs25/models/loops/wing_area_component/: update_wing_area_aero.py  update_wing_area_geom.py
src/fastoad_cs25/models/loops/wing_area_component/tests/: __init__.py  test_update_wing_area_aero.py  test_update_wing_area_geom.py
src/fastoad_cs25/models/propulsion/: __init__.py
src/fastoad_cs25/models/propulsion/fuel_propulsion/rubber_engine/: __init__.py  constants.py  exceptions.py  openmdao.py  rubber_engine.py
src/fastoad_cs25/models/propulsion/fuel_propulsion/tests/: test_propulsion.py
src/fastoad_cs25/models/weight/: constants.py  weight.py
src/fastoad_cs25/models/weight/cg/: cg.py  constants.py
src/fastoad_cs25/models/weight/cg/cg_components/: __init__.py  compute_cg_control_surfaces.py  compute_cg_others.py  compute_cg_ratio_aft.py  compute_cg_tanks.py  compute_cg_wing.py  compute_global_cg.py  compute_ht_cg.py  (+3 more)
src/fastoad_cs25/models/weight/mass_breakdown/: __init__.py  constants.py  cs25.py  mass_breakdown.py  payload.py  update_mlw_and_mzfw.py
src/fastoad_cs25/notebooks/01_tutorial/: 01_tutorial.ipynb  02_postprocessing.ipynb
src/fastoad_cs25/notebooks/01_tutorial/data/: CeRAS01_baseline.xml  oad_process_timestep_mission.yml
src/fastoad_cs25/notebooks/02_CeRAS_case_study/: CeRAS_case_study.ipynb  ceras_utils.py
src/fastoad_cs25/notebooks/02_CeRAS_case_study/data/: CeRAS_data_for_plots.xml  CeRAS_missions.yml  CeRAS_reference_data.xml  oad_sizing.yml  oad_sizing_out.xml
tests/: __init__.py  conftest.py
tests/integration_tests/oad_process/: test_oad_process.py
tests/integration_tests/oad_process/data/: CeRAS01_infeasible_wing_geometry.xml  CeRAS01_legacy.xml  CeRAS01_legacy_breguet_result.xml  CeRAS01_legacy_mission_result.xml  no_kink_breguet_result.xml  oad_process.yml  oad_process_breguet.yml  oad_process_infeasible_wing_geometry.yml  oad_process_mission.yml  oad_process_mission_only.yml
(+103 files in other folders)
